--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,21 +2,46 @@ nav {
     background-color: darkblue;
     padding: 10px;
 }
-nav a{
+
+nav a {
     color: white;
     display: block;
     padding: 20px;
 }
+
 h1 {
     color: darkblue;
 }
-img {
+
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
+
 p {
+    padding: 0;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 2px solid rgb(0 0 0 /0.2);
     padding: 10px;
+    background-color: beige;
+    color: black;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 20px;
+    border-top: 1px solid#000;
+    text-align: center;
 }
