--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,16 @@
+:root {
+    --padding: 10px;
+}
+
 nav {
     background-color: darkblue;
-    padding: 10px;
+    padding: var(--padding);
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: var(--padding);
 }
 
 h1 {
@@ -33,7 +37,7 @@ aside {
     width: 20rem;
     margin: 1rem;
     border: 2px solid rgb(0 0 0 /0.2);
-    padding: 10px;
+    padding: var(--padding);
     background-color: beige;
     color: black;
     text-align: center;
