--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,28 @@
-:root {
-    --padding: 10px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
 }
 
 nav {
     background-color: darkblue;
-    padding: var(--padding);
+    padding: 10px;
 }
 
 nav a {
     color: white;
     display: block;
-    padding: var(--padding);
+    padding: 10px;
 }
 
 h1 {
     color: darkblue;
+    padding: .5rem;
 }
 
 main {
@@ -22,25 +30,23 @@ main {
 }
 
 main img {
-    width: 150px;
+    width: 96px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p {
-    padding: 0;
+    margin: 1rem;
 }
 
 aside {
     width: 20rem;
-    margin: 1rem;
-    border: 2px solid rgb(0 0 0 /0.2);
-    padding: var(--padding);
-    background-color: beige;
-    color: black;
     text-align: center;
+    position: relative;
 }
 
 aside img {
@@ -48,8 +54,27 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    top: 15px;
+    left: 120px;
+}
+
 footer {
     margin-top: 20px;
     border-top: 1px solid#000;
     text-align: center;
+}
+
+/* Class selector */
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 /10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+.indent {
+    padding: 2rem;
 }
