--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: rgb(0, 0, 0);
     --accent1-color: #000000;
-    --accent2-color: #339282;
+    --accent2-color: #4cd3bc;
     --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: Arial, Helvetica, sans-serif;
 }
