--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -74,7 +74,7 @@ h2 {
 .hero article {
     position: absolute;
     top: 390px;
-    color: #fff;
+    color: #000000;
     background-color: var(--accent2-color);
     opacity: 0.9;
 }
